root/css/main.css
/* ... */
div.detail-box div.field {
  padding: 0.2em;
}

div.field-title {
  flex: 0 0 auto;
  font-size: 1em;
  padding:0 0.5em 0 0;
  width: 100%;
  font-weight: bold;
  margin-bottom: 8px;
}

div.field-title .has-tooltip {
  border-bottom: 1px dashed gray;
}

div.field-content {
  width: 100%;
  /* display:inline-table; */
}

.one-column div.field-title {
  float:none;
  position:static;
  vertical-align:top;
}

@media (min-width: 1280px) {
  .one-column div.field {
    flex-direction: row;
  }
  .one-column div.field-title {
    width: 12em;
    text-align: right;
  }

  .one-column div.field-content {
    width: calc(100% - 12em);
  }
}

/* used in field-title tooltip */
.qtip-tooltip {
  font-size: 9pt;
}

/* Curator specific fields */
div.field-curator {
  margin:1em;
  padding:1em;
  background:#CCFFFF;
  border:1px solid gray;
  width:80%;
}

div.field-curator span.desc {
  position:absolute;
  right:0.4em;
  bottom:0.2em;
}

#colorbox div.field-title {
  width: 7em;
}


/* Subfields: fields inside of fields */
/* widget field titles: ie Identification > IDs */

div.field .field .field-title {
  width: 7em;
}

div.field .field .field-content {
  max-width:35em;
}

/* list as direct child of field content */
.field-content > ul {
  margin: 0 0;
  padding: 0 0 0 1em;
}



/* Special field elements */
/* Google Map */
div#google-map {
    position:relative;
    height: auto;
    overflow:hidden;
}

/* curator comment */
.curator-comment-field {
    padding: 0.3em 0;
}

.curator-comment-field .evidence {
    display: inline;
}



/* dataheader and datacell are used in page-wide tables such as in the
   listing of all rearrangements by chrom on the rearrangment page */

.code             {
                    background-color: #CCFFFF;
                    font-family: Courier, monospace;
                    border:1px solid grey;
                    font-size:1em;
                    margin:1em;
                    padding:0.5em;
}



/* ===============================================

       Data-specific styles

   =============================================== */
.species { font-style: italic; }

/* The variation summary */
.cgc-strain {   /* strains available from the CGC */
    font-style:italic;
}

.strains-with-single-variation {
     font-weight:bold;
}

/* image icon ex linking from expression widget to image*/
.img-link {
    cursor: pointer;
    border: 1px solid #666;
    background: white;
    text-align: center;
    margin-top: 5px;
}
.img-link span{
    vertical-align: middle;
    display: inline-block;
    margin-right: 0.2em;
}
.img-link > div.expr-img-wrapper {
    max-height: 100px;
    width: 100px;
    overflow: hidden;
}
.img-link img {
    width: 100%;
}

/* link to AGR with AGR logo */
.agr-logo-link {
  margin-top: 5px;
}

/* cytoscape legend */
#cyto-wrapper {
  display: flex;
  flex-direction: row-reverse;
  justify-content: flex-end;
}

#cy-view {
  width: 750px;
  height: 750px;
  margin-right: 1em;
  z-index: 1;
  overflow: hidden;
}


#cyto_legend {
    width:15em;
    right:0;
    z-index:1001; /*
                     greater than cy div z-index 1000
                     smaller than dropdown menu in search #searchSelect ul */
}

#cyto_legend div {
    margin: 0.2em 0 0.4em;
}


/* multi-view styling */
.multi-view-container label {
  padding: 0 1em 1em 0.4em;
  display: inline-block;
}

/* GO table styles */
#go_summary_Molecular_function table tbody td:nth-child(2) > ul,
#go_summary_Cellular_component table tbody td:nth-child(2) > ul,
#go_summary_Biological_process table tbody td:nth-child(2) > ul{
  list-style-type: none;
  margin: 0;
}

#go_summary_Molecular_function table tbody td:nth-child(1),
#go_summary_Cellular_component table tbody td:nth-child(1),
#go_summary_Biological_process table tbody td:nth-child(1) {
  width: 60px;
}

/* GO ribbon */
.go-ribbon-container {
  height: 270px; /* hard code height to avoid content loaded causes scroll position to shift. */
}

/* gene phenotype table and phenotypes table on other pages */
#table_phenotype_by tbody ul,
#table_phenotypes_by tbody ul,
#table_phenotype_not_observed_by tbody ul,
#table_phenotypes_not_observed_by tbody ul,
#table_drives_overexpression_by tbody ul {
  list-style-type: none;
  padding-left: 0;
  margin: 0;
}

#table_phenotype_by tbody td:nth-child(3) .evidence,
#table_phenotypes_by tbody td:nth-child(3) .evidence,
#table_phenotype_not_observed_by tbody td:nth-child(3) .evidence,
#table_phenotypes_not_observed_by tbody td:nth-child(3) .evidence,
#table_drives_overexpression_by tbody td:nth-child(3) .evidence {
  margin-left: 1em; /* so it aligns with non-list elements, in the same column */
}

/* FPKM control statistics table on Expression widget */
table#table_fpkm_controls_by td:nth-child(2),
table#table_fpkm_controls_by td:nth-child(3) {
  width: 40%;
}

/* million mutation project allele table */
#alleles_other_toggle {
  padding: 5px 0 0;
}

#polymorphisms_toggle {
  padding: 5px 0 0;
}

#genetics-alleles p {
  margin: 5px 0 0;
}

#genetics-alleles {
  margin-bottom: 5px;
}


/* referenced widget on paper page */
/* referenced widget layout the thumbnails horizontally */
#referenced-content .img-link {
  float: left;
  margin: 3px;
  padding: 2px;
}
#referenced-content .img-link .expr-img-wrapper {
  height: 100px;
}
#referenced-content .img-link .expr-img-wrapper img {
  width: auto;
  height: 100%
}

/* expression widget */
#expression-content .img-link-collection {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

#expression-content .img-link {
  display: flex;
  flex-direction: column;
  justify-content: center;
  border: 1px solid #aaa;
  margin: 0 5px 5px 0;
}

#expression-content .img-link .expr-img-wrapper img {
  width: auto;
  height: auto;
  max-width: 150px;
  max-height: 150px;
}

#expression-content .img-link .expr-img-wrapper {
  align-self: center;
  max-height: 150px;
  width: 150px;
}
/* ... */

